tests/compile_fail/hash/non_hash_field.rs
struct NonHashable(i32);

#[derive(derive_more::Hash)]
struct CantHash(NonHashable);

fn main() {}